content/consul/v2.0.x/content/docs/envoy-extension/ext.mdx
---
layout: docs
page_title: Delegate authorization to an external service
description: Learn how to use the `ext-authz` Envoy extension to delegate data plane authorization requests to external systems. 
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-03-31T13:43:36-07:00
last_modified: 2026-07-14T16:53:58.000Z
# END AUTO GENERATED METADATA
---

# Delegate authorization to an external service

This topic describes how to use the external authorization Envoy extension to delegate data plane authorization requests to external systems. 

## Workflow

Complete the following steps to use the external authorization extension:

1. Configure an `EnvoyExtensions` block in a service defaults or proxy defaults configuration entry. 
1. Apply the configuration entry.

## Add the `EnvoyExtensions`

Add Envoy extension configurations to a proxy defaults or service defaults configuration entry. Place the extension configuration in an `EnvoyExtensions` block in the configuration entry.

- When you configure Envoy extensions on proxy defaults, they apply to every service.
- When you configure Envoy extensions on service defaults, they apply to a specific service.

Consul applies Envoy extensions configured in proxy defaults before it applies extensions in service defaults. As a result, the Envoy extension configuration in service defaults may  override configurations in proxy defaults.

The following example shows a service defaults configuration entry for the `api` service that directs the Envoy proxy to make gRPC authorization requests to the `authz` service:

<CodeTabs tabs={[ "HCL", "JSON", "YAML" ]}>
<CodeBlockConfig filename="api-auth-service-defaults.hcl">

```hcl
Kind = "service-defaults"
Name = "api"
EnvoyExtensions = [
  {
    Name = "builtin/ext-authz"
    Arguments = {
      ProxyType = "connect-proxy"
      Config = {
        GrpcService = {
          Target = {
            Service = {
              Name = "authz"
            }
          }
        }
      }
    }
  }
]
```
</CodeBlockConfig>
<CodeBlockConfig filename="api-auth-service-defaults.json">

```json
{
  "Kind": "service-defaults",
  "Name": "api",
  "EnvoyExtensions": [{
    "Name": "builtin/ext-authz",
    "Arguments": {
      "ProxyType": "connect-proxy",
      "Config": {
        "GrpcService": {
          "Target": {
            "Service": {
              "Name": "authz"
              }
            }
          }
        }
      }
    }
  ]
}
```

</CodeBlockConfig>
<CodeBlockConfig filename="api-auth-service-defaults.yaml">

```yaml
apiVersion: consul.hashicorp.com/v1alpha1
kind: ServiceDefaults
metadata:
  name: api
  namespace: default
spec:
  envoyExtensions:
  - name: builtin/ext-authz
    arguments:
      proxyType: connect-proxy
      config:
        grpcService:
          target:
            service:
              name: authz
              namespace: authz
```
</CodeBlockConfig>
</CodeTabs>

Refer to the [external authorization extension configuration reference](/consul/docs/reference/proxy/extensions/ext-authz) for details on how to configure the extension. 

Refer to the [proxy defaults configuration entry reference](/consul/docs/reference/config-entry/proxy-defaults) and [service defaults configuration entry reference](/consul/docs/reference/config-entry/service-defaults) for details on how to define the configuration entries. 

### Apply the extension to an API gateway <EnterpriseAlert inline />

<EnterpriseAlert>Applying the external authorization extension to API gateways requires Consul Enterprise 2.0.2 or later.</EnterpriseAlert>

To delegate authorization for north-south traffic that an API gateway routes to mesh services, apply the extension to the gateway's service defaults configuration entry and set `ProxyType` to `api-gateway`. Unlike `connect-proxy`, the `api-gateway` proxy type allows the [`Target.URI`](/consul/docs/reference/proxy/extensions/ext-authz#arguments-config-grpcservice-target-uri) to point to a remote authorization service.

The following example applies the extension to an API gateway named `api-gateway` and defines the complete set of fields that apply to the `api-gateway` proxy type. It sends gRPC authorization requests to the `authz` service, forwards the gateway's peer certificate, and restricts which client request headers Envoy forwards to the authorization service. Because the feature is Enterprise only, the target `Service` may specify a `Namespace` and `Partition`:

<CodeTabs tabs={[ "HCL", "JSON", "YAML" ]}>
<CodeBlockConfig filename="gateway-service-defaults.hcl">

```hcl
Kind = "service-defaults"
Name = "api-gateway"
Protocol = "http"
EnvoyExtensions = [
  {
    Name = "builtin/ext-authz"
    Arguments = {
      ProxyType = "api-gateway"
      Config = {
        BootstrapMetadataLabelsKey = "envoy.filters.http.header_to_metadata"
        GrpcService = {
          Target = {
            Service = {
              Name      = "authz"
              Namespace = "default"
              Partition = "default"
            }
            Timeout = "1s"
          }
          Authority = "authz.example.com"
          InitialMetadata = [
            {
              Key   = "x-consul-gateway"
              Value = "api-gateway"
            }
          ]
        }
        AllowedHeaders = [
          {
            Prefix = "x-"
          }
        ]
        DisallowedHeaders = [
          {
            Exact      = "authorization"
            IgnoreCase = true
          }
        ]
        IncludePeerCertificate = true
        StatPrefix             = "api_gateway_ext_authz"
      }
    }
  }
]
```

</CodeBlockConfig>
<CodeBlockConfig filename="gateway-service-defaults.json">

```json
{
  "Kind": "service-defaults",
  "Name": "api-gateway",
  "Protocol": "http",
  "EnvoyExtensions": [{
    "Name": "builtin/ext-authz",
    "Arguments": {
      "ProxyType": "api-gateway",
      "Config": {
        "BootstrapMetadataLabelsKey": "envoy.filters.http.header_to_metadata",
        "GrpcService": {
          "Target": {
            "Service": {
              "Name": "authz",
              "Namespace": "default",
              "Partition": "default"
            },
            "Timeout": "1s"
          },
          "Authority": "authz.example.com",
          "InitialMetadata": [{
            "Key": "x-consul-gateway",
            "Value": "api-gateway"
          }]
        },
        "AllowedHeaders": [{
          "Prefix": "x-"
        }],
        "DisallowedHeaders": [{
          "Exact": "authorization",
          "IgnoreCase": true
        }],
        "IncludePeerCertificate": true,
        "StatPrefix": "api_gateway_ext_authz"
      }
    }
  }]
}
```

</CodeBlockConfig>
<CodeBlockConfig filename="gateway-service-defaults.yaml">

```yaml
apiVersion: consul.hashicorp.com/v1alpha1
kind: ServiceDefaults
metadata:
  name: api-gateway
spec:
  protocol: http
  envoyExtensions:
  - name: builtin/ext-authz
    arguments:
      ProxyType: api-gateway
      Config:
        BootstrapMetadataLabelsKey: envoy.filters.http.header_to_metadata
        GrpcService:
          Target:
            Service:
              Name: authz
              Namespace: default
              Partition: default
            Timeout: 1s
          Authority: authz.example.com
          InitialMetadata:
          - Key: x-consul-gateway
            Value: api-gateway
        AllowedHeaders:
        - Prefix: x-
        DisallowedHeaders:
        - Exact: authorization
          IgnoreCase: true
        IncludePeerCertificate: true
        StatPrefix: api_gateway_ext_authz
```

</CodeBlockConfig>
</CodeTabs>

The service defaults extension sets the authorization behavior for the whole cluster. If you want to enable external authorization only for specific routes, use the [API gateway configuration entry](/consul/docs/reference/config-entry/api-gateway#extauthz) to disable the global external authorization for the gateway and the [HTTP route `ExtAuthz` filter](/consul/docs/reference/config-entry/http-route#rules-filters-extauthz) to override it for specific routes. 

Refer to [Delegate API gateway authorization to an external service on virtual machines](/consul/docs/north-south/api-gateway/secure-traffic/ext-authz/vm) and [on Kubernetes](/consul/docs/north-south/api-gateway/secure-traffic/ext-authz/k8s) for the complete workflows.

<Warning>
  Adding Envoy extensions in proxy defaults configuration entries may have unintended consequences. We recommend configuring `EnvoyExtensions` in service defaults configuration entries in most cases.
</Warning>

### Unsupported Envoy configuration fields

The following Envoy configurations are not supported:

| Configuration | Workaround |
| --- | --- |
| `deny_at_disable` | Disable filter by removing it from the service's configuration in the configuration entry. |
| `failure_mode_allow` | Set the `EnvoyExtension.Required` field to `true` in the [service defaults configuration entry](/consul/docs/reference/config-entry/service-defaults#envoyextensions) or [proxy defaults configuration entry](/consul/docs/reference/config-entry/proxy-defaults#envoyextensions). |
| `filter_enabled` | Set the `EnvoyExtension.Required` field to `true` in the [service defaults configuration entry](/consul/docs/reference/config-entry/service-defaults#envoyextensions) or [proxy defaults configuration entry](/consul/docs/reference/config-entry/proxy-defaults#envoyextensions). |
| `filter_enabled_metadata` | Set the `EnvoyExtension.Required` field to `true` in the [service defaults configuration entry](/consul/docs/reference/config-entry/service-defaults#envoyextensions) or [proxy defaults configuration entry](/consul/docs/reference/config-entry/proxy-defaults#envoyextensions). |
| `transport_api_version` | Consul only supports v3 of the transport API. As a result, there is no workaround for implementing the behavior of this field. |

## Apply the configuration entry

If your network is deployed to virtual machines, use the `consul config write` command and specify the proxy defaults or service defaults configuration entry to apply the configuration. For Kubernetes-orchestrated networks, use the `kubectl apply` command. The following example applies the extension in a proxy defaults configuration entry.

<CodeTabs tabs={[ "HCL", "JSON", "YAML" ]}>

```shell-session
$ consul config write api-auth-service-defaults.hcl
```

```shell-session
$ consul config write api-auth-service-defaults.json
```

```shell-session
$ kubectl apply -f api-auth-service-defaults.yaml
```

</CodeTabs>
